syntax = "proto3";

package pb;

import "global.proto";

// rules: qevent_rpc
service RPC_Chat {
    //rpc Chat (Param) returns (Response);

    // cruD: c: with sending msg, u: none,
    rpc ChatDeleteChat (ChatDeleteChatParam) returns (ChatDeleteChatResponse);

    // Privacy: none in here, with settings in profile privacy

    // Messages
    rpc ChatSendMessage (ChatSendMessageParam) returns (ChatSendMessageResponse);
    rpc ChatEditMessage (ChatEditMessageParam) returns (ChatEditMessageResponse);
    rpc ChatDeleteMessages (ChatDeleteMessagesParam) returns (ChatDeleteMessagesResponse);
    rpc ChatDeleteHistory (ChatDeleteHistoryParam) returns (ChatDeleteHistoryResponse);

    // Notifications
    rpc ChatSetNotification (ChatSetNotificationParam) returns (ChatSetNotificationResponse);
    // add? MuteChat?

    // Others
    rpc ChatSendDoingAction (ChatSendDoingActionParam) returns (ChatSendDoingActionResponse);
    rpc ChatReportChat (ChatReportChatParam) returns (ChatReportChatResponse);

    // Set Draft: here or an rpc shared with others?

    //========= Inbox ===========
    // MarkAsRead / MarkAsUnRead

    // PinChat / UnPinChat

    // ArchiveChat / UnArchiveChat
    // Mute
    //========= End of Inbox ===========

    // Views
    rpc ChatGetFull (ChatGetFullMessageParam) returns (ChatGetFullMessageResponse);
    rpc ChatGetMessagesList (ChatGetMessagesListParam) returns (ChatGetMessagesListResponse);
    rpc ChatGetMediaList (ChatGetMediaListParam) returns (ChatGetMediaListResponse);
    rpc ChatGetInbox (ChatGetInboxParam) returns (ChatGetInboxResponse);
}
// todo : clean profile_cid
// crud
message ChatDeleteChatParam {
    uint64 profile_cid = 1;
    uint64 chat_gid = 2;
    // both - many
}

message ChatDeleteChatResponse {
}

// Members


// Privacy

// Messages

message ChatSendMessageParam {
//    uint64 profile_cid = 1;
    uint64 chat_gid = 2;
    NewMessageInput message_input = 3;
}

message ChatSendMessageResponse {

}

message ChatEditMessageParam {
    uint64 chat_gid = 2;
    fixed64 message_gid = 4;
//    uint32 by_profile_cid = 3;
    string new_text = 6;
}

message ChatEditMessageResponse {

}

message ChatDeleteMessagesParam {
//    uint64 profile_cid = 1;
    uint64 chat_gid = 2;
    repeated uint64 message_gids = 3;
}

message ChatDeleteMessagesResponse {

}

message ChatDeleteHistoryParam {
//    uint64 profile_cid = 1;
    uint64 chat_gid = 2;
}

message ChatDeleteHistoryResponse {
}

// Notifications
message ChatSetNotificationParam {
}

message ChatSetNotificationResponse {
}


// Others

message ChatAvatarChangeParam {
}

message ChatAvatarChangeResponse {
}

message ChatSendDoingActionParam {
}

message ChatSendDoingActionResponse {
}

message ChatReportChatParam {
}

message ChatReportChatResponse {
}

// Views

message ChatGetFullMessageParam {
    uint32 group_id = 1;
}

message ChatGetFullMessageResponse {

}

message ChatGetMessagesListParam {
}

message ChatGetMessagesListResponse {
}

message ChatGetMediaListParam {
}

message ChatGetMediaListResponse {
}

message ChatGetInboxParam {
}

message ChatGetInboxResponse {
}
// Dep

/*

message Param {
}

message Response {
}

*/
